--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,39 @@ p.bt-desc {font-size: 22px; font-weight: 300; color: #818181; margin-bottom: 10p
 .bestM .best-title .bt-tit {font-size: 22px;}
 .bestM .bestM .bt-desc {} */
 
+/* resent */
+.recentM {padding: 10px 0; margin-top: 19px; overflow: hidden;} 
+.recentM .recent {float:left; width: 48%; margin-right: 2%;}
+.recentM .recnet:last-child {margin-right: 0;}
+#recent_h2 {font-size: 20px; font-weight: bold; margin-bottom: 12px; margin-top: 16px; padding-top: 20px; border-top: 1px solid #ebebeb;}
+span.rct-stit {font-size: 15px; line-height: 1.9;}
+h2.rct-tit {color: #908f94; font-size: 15px; font-weight: 300;}
+
+/*nextM */
+.nextM {}
+#next_h2 {font-size: 20px; font-weight: bold; margin-bottom: 12px; margin-top: 16px; padding-top: 20px; border-top: 1px solid #ebebeb;}
+.nextM .next{display: flex; margin-bottom: 16px; position: relative;}
+.nextM .next:after {
+    content:'';
+    position: absolute; right: 0; bottom: -8px;
+    width: calc(100% - 114px);
+    height: 1px;
+    background: #ebebeb;
+}
+.nextM .next .next-img { width: 102px; margin-right: 12px;;}
+.nextM .next .next-title {display: flex; flex-direction: column; justify-content: center;}
+/* .netxM .next .next-title .nt-stit {color: #de5e7c; font-size: 12px} */
+span.nt-stit {color: #da5e7c; font-size: 12px;}
+h3.nt-tit {font-size: 16px;}
+p.nt-desc {
+    font-size: 13px; color: #a1a1a1; font-weight: 300;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
 /* mediaquery <- 반응형 스크린*/ 
 @media (max-width: 1020px){
     .container {width: 100%;}
